# UniUD

./: .gitignore  1.17 miglioramento delle prestazioni.md  README.md  cspell.json
Bruniera/: .gitignore  xorrer.c
Bruniera/OOP/: 2.1 introduzione.md
Bruniera/OS laboratorio/: 2.1 introduzione.md  2.2 introduzione alla shell.md  2.3 inode e link.md  devs.txt
Bruniera/OS teoria/: 2.1 introduzione.md
Bruniera/algoritmi avanzati/: 5.1  introduzione.md  5.10 catene di markov.md  5.2 string matching.md  5.3 molti pattern.md  5.4 sottosequenza ripetuta.md  5.5 pattern matching alternativo.md  5.6 lowest common ancestor.md  5.7 distanza approssimata fra stringhe.md  5.8 algoritmi randomizzati.md  5.9 graph colouring.md
Bruniera/algoritmi laboratorio/: 2.1.c  2.7.c  2.8.c  2.9.c  vettore.txt
Bruniera/architettura degli elaboratori/: 1 azzeramento.md  1.0 introduzione.md  1.1 azzeramento.md  1.10 memoria.md  1.11 rappresentazione dell'informazione.md  1.12 esercizi sui circuiti sequenziali.md  1.13 codifica dei caratteri.md  1.14 codici di corresione errori.md  1.14 codici di correzione errori.md  1.15 memorizzazione dei dati.md  1.16 processore.md  1.17 miglioramento delle prestazioni.md  1.18 assembly.md  1.19 livello ISA.md  1.2  Storia dei sistemi di calcolo.md  1.20 i-o.md  1.21 struttura fisica di un calcolatore.md  1.22 bus.md  1.22 controllo di flusso assembly.md  1.23 controllo di flusso assembly.md  1.24 gerarchia delle memorie.md  1.25 funzioni, metodi, subroutine assembly.md  1.26 paralllelismo.md  1.27 chiamate al sistema.md  1.28 strutture dati dinamiche.md  1.3 logica binaria.md  1.4 algebra booleana.md  1.5 circuiti logici di base.md  1.6 aritmetica dei calcolatori.md  1.7 progettazione circuiti sequenziali.md  1.8 ritardo e memorie.md  1.9 circuit integrati.md  2  Storia dei sistemi di calcolo.md  3 logica binaria.md  strutture dati dinamiche.md
Bruniera/basi di dati/: 3.1 introduzione.md  3.10 database server.md  3.10 db server e transazioni.md  3.11 organizzazione fisica.md  3.2 modelli di dati.md  3.3 sistemi di basi di dati.md  3.4 modello ER.md  3.4 modello relazionale.md  3.5 progettazione.md  3.6 normalizzazione.md  3.7 linguaggi di interrogazione.md  3.8 SQL.md  3.9 SQL.md
Bruniera/calcolo scientifico/: 2.1 introduzione.md  2.2 errori del calcolatore.md  2.3 zeri.md  4.1 errori continua.md  4.1 errori.md  4.2 zeri nuovo.md  4.2 zeri.md  4.3 metodo a pendenza costante e metodo di Newton.md  4.4 metodi di accelerazione.md  4.5 matrici.md  4.6 sistemi lineari.md  4.7 metodi diretti.md
Bruniera/complessità/: 5.1 introduzione.md  5.2 codifica.md  5.3 complessità computazionale.md  5.4 riduzioni.md
Bruniera/database laboratiorio/: 3.1 relazione.md  3.2 progettazione concettuale.md
Bruniera/fondamenti dell'informatica/: 2.1 introduzione.md  2.10 grammatiche di tipo 0.md  2.11 calcolare con le grammatiche.md  2.12 algoritmi e MdT.md  2.12 algoritmi.md  2.13 funzioni parziali ricorsive.md  2.14 Turing-equivalenza.md  2.15 tesi di Church-Turing.md  2.16 codifica delle coppie.md  2.17 macchina universale.md  2.18 teoria della ricorsione.md  2.19 riducibilità funzionale.md  2.2 stringhe.md  2.20 r.e. completi.md  2.21 teoremi di ricorsione.md  2.22 insiemi creativi e produttivi.md  2.23 esercizi insiemi produttivi.md  2.24 complessità computazionale.md  2.25 complessità definizioni.md  2.26 P vs NP.md  2.27 complessita in spazio.md  2.28 NP-completezza.md  2.3 epsilon-transizioni.md  2.4 espressioni regolari.md  2.5 proprietà dei linguaggi.md  2.6 DFA minimo.md  2.7 grammatica cf.md  2.8 proprietà dei linguaggi CF.md  2.9 grammatiche di tipo 1.md
Bruniera/geometria computazionale/: 3.1 introduzione.md  3.2 robustezza.md  3.3 convex hull.md  3.5 suddivizioni piane DCEL.md  (+5 more)
Cavasin/: Era una notte buia e tempestosa  Era una notte buia e tempestosa.txt
Cavasin/laboratorio algoritmi/: 10.c  11.c  12.c  13.c  14.c  15.c  4.c  5.c  6.c  8.c  CMakeLists.txt  algoritmi.lnk  queuesAndStacks.c  sorting.c  trees.c  trees.h
Cavasin/laboratorio algoritmi/progetto/: CMakeLists.txt  driver.c  heap.c  select.c  standalone.c  timespec_math.c  types.h
Cavasin/laboratorio algoritmi/resources/: data.xlsx  select-out.txt  select.docx
Cavasin/laboratorio algoritmi/utils/: utils.c
Cavasin/laboratorio sistemi operativi/nim/: CMakeLists.txt  Makefile  README.md  client.c  common.h  server.c  sockets.h  tests.c  threads.h
Cavasin/laboratorio sistemi operativi/nim/res/: logFrame.xp  logFrame1.txt  logFrame2.txt  logFrame3.txt  logFrame4.txt  logFrame5.txt  prompt.txt  skyline1.txt  skyline1.xp  title.txt  title.xp  towerSection.txt  towerSection.xp  towerSection.xpm  towerSectionDimmed.txt  towerSectionDimmed.xp  towerSectionDimmed.xpm  wtc1.txt
Cavasin/laboratorio sistemi operativi/nim/visualt/: CMakeLists.txt
Cavasin/laboratorio sistemi operativi/nim/visualt/include/visualt/: visualt.h
Cavasin/laboratorio sistemi operativi/nim/visualt/src/: CMakeLists.txt  visualt.c
Rosu/: .markdownlint.json
architettura/: 1_10_2018.md
(+1495 files in other folders)
